Add all the TODO functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,15 @@
 {% block list %}
 {% include "list.html" %}
 <form
+    hx-trigger="click"
     hx-post="/item/"
     hx-target="#list"
-    hx-swap="afterend"
+    hx-swap="beforeend"
+    hx-on::after-request="this.reset()"
 >
     <label>
         <input type="text" name="text">
     </label>
-    <button
-        hx-trigger="click"
-        hx-post="/item/"
-        hx-target="#list"
-        hx-swap="beforeend"
-    >Add new</button>
+    <button>Add new</button>
 </form>
 {% endblock %}
