--- a/templates/macros/list_item.html
+++ b/templates/macros/list_item.html
@@ -18,6 +18,14 @@
         hx-swap="outerHTML"
     >Done</button>
     {% endif %}
+    {% if list_item["state"] == "DONE" %}
+    <button
+        hx-trigger="click"
+        hx-patch="/item/{{ list_item["id"] }}/undo"
+        hx-target="#list-{{ list_item["id"] }}"
+        hx-swap="outerHTML"
+    >Undo</button>
+    {% endif %}
     <button
         hx-trigger="click"
         hx-delete="/item/{{ list_item["id"] }}"
