--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,15 @@
 <head>
     <title>Todo list</title>
     <link rel="stylesheet" href="/static/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h1>Todo list</h1>
-    {% block list %}{% endblock %}
+    <div class="page-wrapper">
+        <div class="title">
+            <h1>Todo list</h1>
+        </div>
+        {% block list %}{% endblock %}
+    </div>
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
 </body>
 </html>
