--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,17 +1,19 @@
-<li id="list-{{ list_item["id"] }}">
+<li class="todo-list" id="list-{{ list_item["id"] }}">
+    <div class="box">
     <label for="text-list-{{ list_item["id"] }}"></label>
     <input
         type="text"
-        class="note-text"
+        class="todo-item-new-text"
         name="text"
         id="text-list-{{ list_item["id"] }}"
         value="{{ list_item["text"] }}"
-        contenteditable
     >
     <button
         hx-patch="/item/{{ list_item["id"] }}/edit"
         hx-trigger="click"
         hx-target="#list-{{ list_item["id"] }}"
         hx-include="[id='text-list-{{ list_item["id"] }}']"
-    >Save</button>
+        class="todo-item-button"
+    ><img class="todo-item-icon" src="/static/icons/save.svg" alt="Save the edited todo item icon"></button>
+    </div>
 </li>
