--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <div class="page-wrapper">
+    <div class="content">
         <div class="title">
             <h1>Todo list</h1>
         </div>
         {% block list %}{% endblock %}
+    </div>
     </div>
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
 </body>
