--- a/templates/list_items/done.html
+++ b/templates/list_items/done.html
@@ -8,19 +8,21 @@
             done
         "
     >{{ list_item["text"] }}</span>
-    <button
-        hx-trigger="click"
-        hx-patch="/item/{{ list_item["id"] }}/undo"
-        hx-target="#list-{{ list_item["id"] }}"
-        hx-swap="outerHTML"
-        class="todo-item-button"
-    ><img class="todo-item-icon" src="/static/icons/undo.svg" alt="Undo todo item icon"></button>
-    <button
-        hx-trigger="click"
-        hx-delete="/item/{{ list_item["id"] }}"
-        hx-target="#list"
-        hx-swap="outerHTML"
-        class="todo-item-button"
-    ><img class="todo-item-icon" src="/static/icons/delete.svg" alt="Delete todo item icon"></button>
+    <span class="todo-buttons">
+        <button
+            hx-trigger="click"
+            hx-patch="/item/{{ list_item["id"] }}/undo"
+            hx-target="#list-{{ list_item["id"] }}"
+            hx-swap="outerHTML"
+            class="todo-item-button"
+        ><img class="todo-item-icon" src="/static/icons/undo.svg" alt="Undo todo item icon"></button>
+        <button
+            hx-trigger="click"
+            hx-delete="/item/{{ list_item["id"] }}"
+            hx-target="#list"
+            hx-swap="outerHTML"
+            class="todo-item-button"
+        ><img class="todo-item-icon" src="/static/icons/delete.svg" alt="Delete todo item icon"></button>
+    </span>
 </div>
 </li>
