--- a/templates/list_items/todo.html
+++ b/templates/list_items/todo.html
@@ -1,31 +1,35 @@
 <li class="
         todo-list
         todo-list-active
-    " id="list-{{ list_item["id"] }}">
+    "
+    id="list-{{ list_item["id"] }}"
+    hx-trigger="click"
+    hx-get="/item/{{ list_item["id"] }}/edit"
+    hx-target="#list-{{ list_item["id"] }}"
+    hx-swap="outerHTML"
+>
 <div class="box">
     <span
         class="
             note-text
             undone-list-item
         "
-        hx-trigger="click"
-        hx-get="/item/{{ list_item["id"] }}/edit"
-        hx-target="#list-{{ list_item["id"] }}"
-        hx-swap="outerHTML"
     >{{ list_item["text"] }}</span>
-    <button
-        hx-trigger="click"
-        hx-patch="/item/{{ list_item["id"] }}/done"
-        hx-target="#list-{{ list_item["id"] }}"
-        hx-swap="outerHTML"
-        class="todo-item-button"
-    ><img class="todo-item-icon" src="/static/icons/check.svg" alt="Done todo item icon"></button>
-    <button
-        hx-trigger="click"
-        hx-delete="/item/{{ list_item["id"] }}"
-        hx-target="#list"
-        hx-swap="outerHTML"
-        class="todo-item-button"
-    ><img class="todo-item-icon" src="/static/icons/delete.svg" alt="Delete todo item icon"></button>
+    <span class="todo-buttons">
+        <button
+            hx-trigger="click"
+            hx-patch="/item/{{ list_item["id"] }}/done"
+            hx-target="#list-{{ list_item["id"] }}"
+            hx-swap="outerHTML"
+            class="todo-item-button"
+        ><img class="todo-item-icon" src="/static/icons/check.svg" alt="Done todo item icon"></button>
+        <button
+            hx-trigger="click"
+            hx-delete="/item/{{ list_item["id"] }}"
+            hx-target="#list"
+            hx-swap="outerHTML"
+            class="todo-item-button"
+        ><img class="todo-item-icon" src="/static/icons/delete.svg" alt="Delete todo item icon"></button>
+    </span>
 </div>
 </li>
