--- a/templates/list_items/todo.html
+++ b/templates/list_items/todo.html
@@ -3,24 +3,30 @@
         todo-list-active
     "
     id="list-{{ list_item["id"] }}"
+>
+<div
+    class="box"
     hx-trigger="click"
     hx-get="/item/{{ list_item["id"] }}/edit"
     hx-target="#list-{{ list_item["id"] }}"
     hx-swap="outerHTML"
+    hx-ext="response-targets"
+    hx-target-error="#any-errors"
 >
-<div class="box">
     <span
         class="
             note-text
             undone-list-item
         "
     >{{ list_item["text"] }}</span>
-    <span class="todo-buttons">
+</div>
+    <span class="todo-buttons" hx-ext="response-targets">
         <button
             hx-trigger="click"
             hx-patch="/item/{{ list_item["id"] }}/done"
             hx-target="#list-{{ list_item["id"] }}"
             hx-swap="outerHTML"
+            hx-target-error="#any-errors"
             class="todo-item-button"
         ><img class="todo-item-icon" src="/static/icons/check.svg" alt="Done todo item icon"></button>
         <button
@@ -31,5 +37,4 @@
             class="todo-item-button"
         ><img class="todo-item-icon" src="/static/icons/delete.svg" alt="Delete todo item icon"></button>
     </span>
-</div>
 </li>
