--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,10 @@
         {% block list %}{% endblock %}
     </div>
     </div>
+    <div id="any-errors">
+    </div>
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+    <script src="https://unpkg.com/htmx.org/dist/ext/response-targets.js"></script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
 </body>
 </html>
