Add admin dashboard to the app

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "todo-base.html" %}
 {% block list %}
 <div class="box">
     <form
@@ -17,5 +17,5 @@
         </button>
     </form>
 </div>
-{% include "list.html" %}
+{% include "todo-list.html" %}
 {% endblock %}
