--- a/templates/list_items/todo.html
+++ b/templates/list_items/todo.html
@@ -34,6 +34,7 @@
             hx-delete="/item/{{ list_item["id"] }}"
             hx-target="#list"
             hx-swap="outerHTML"
+            hx-target-error="#any-errors"
             class="todo-item-button"
         ><img class="todo-item-icon" src="/static/icons/delete.svg" alt="Delete todo item icon"></button>
     </span>
