Add loader functionality

--- a/templates/list_items/done.html
+++ b/templates/list_items/done.html
@@ -16,6 +16,7 @@
             hx-trigger="click"
             hx-patch="/item/{{ list_item["id"] }}/undo"
             hx-target="#list-{{ list_item["id"] }}"
+            hx-indicator=".my-indicator"
             hx-swap="outerHTML"
             hx-target-error="#any-errors"
             class="todo-item-button"
@@ -24,6 +25,7 @@
             hx-trigger="click"
             hx-delete="/item/{{ list_item["id"] }}"
             hx-target="#list"
+            hx-indicator=".my-indicator"
             hx-swap="outerHTML"
             hx-target-error="#any-errors"
             class="todo-item-button"
