--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,7 @@
         hx-post="/item/"
         hx-target="#list"
         hx-swap="beforeend"
+        hx-indicator=".my-indicator"
         hx-on::after-request="this.reset()"
         class="todo-add-new-item-container"
     >
