--- a/templates/todo-base.html
+++ b/templates/todo-base.html
@@ -3,6 +3,7 @@
 <head>
     <title>Todo list</title>
     <link rel="stylesheet" href="/static/main.css" />
+    <link rel="stylesheet" href="/static/loader.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body
@@ -10,12 +11,15 @@
         _="on htmx:sendError set #connectivity-error.open to true"
 >
     <div class="page-wrapper">
+    <div class="loader-container my-indicator"><div class="loader my-indicator"></div>
+    </div>
     <div class="content">
         <div class="title">
             <h1>Todo list</h1>
         </div>
         {% block list %}{% endblock %}
     </div>
+
     </div>
     <div id="any-errors">
     </div>
