--- a/templates/list_items/edit.html
+++ b/templates/list_items/edit.html
@@ -16,6 +16,7 @@
             hx-trigger="click,keyup[keyCode=={{ enter_key }}] from:#text-list-{{ list_item["id"] }}"
             hx-target="#list-{{ list_item["id"] }}"
             hx-include="[id='text-list-{{ list_item["id"] }}']"
+            hx-indicator=".my-indicator"
             hx-swap="outerHTML"
             hx-target-error="#any-errors"
             class="todo-item-button"
